--- a/gb/20/5/28/n12143427.md
+++ b/gb/20/5/28/n12143427.md
@@ -1,60 +1,75 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/roz252/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/roz252/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/roz252/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/roz252/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/roz252/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/roz252/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/roz252/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/roz252/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/roz252/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/roz252/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/roz252/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/roz252/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/roz252/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/roz252/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/roz252/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/roz252/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/roz252/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/roz252/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/roz252/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/roz252/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/roz252/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>美计划取消中共军方背景人员签证 涉数千人</h2>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>美拟制裁数千中共军校人员 取消签证并驱逐</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2016/03/1407271151152192-600x400.jpg" />
 <h6>图为中国人在美国签证处排队。（Mark RALSTON／AFP）
 </h6>
 <hr>
-	<p>【大纪元2020年05月28日讯】（大纪元记者徐简综合报导）美中关系处于几十年来的最糟糕时刻。美国官员说，川普（特朗普）政府计划取消与中共军方所属大学有直接关系的中国毕业生和研究人员的签证，涉及数千人。</p>
-<p>《纽约时报》5月28日报导，这将是第一个禁止某类中国学生进入美国的计划。目前美国已经就贸易、技术、人权和媒体访问等政策，与中共进行了几轮交锋。</p>
-<p>在中共强行推动“港版国安法”之际，目前美国官员正在讨论如何制裁中共。但也同时在考虑取消中国学生签证的计划，美国国务卿蓬佩奥（Mike Pompeo）本周二在白宫会议上与川普总统讨论了取消签证的计划。</p>
+	<p>【大纪元2020年05月28日讯】（大纪元记者徐简综合报导）美中关系处于几十年来的最糟糕时刻。美国官员说，川普（特朗普）政府或在本周宣布，取消与中共军方所属大学有直接关系的中国学生和研究人员的签证，并驱除出境，这将涉及数千中国公民。</p>
+<h2>美国政府或本周宣布 取消签证和驱逐</h2>
+<p>《纽约时报》5月28日首先报导了这个消息，美国国务卿蓬佩奥（Mike Pompeo）本周二在白宫会议上与川普总统讨论了取消签证的计划。</p>
+<p>若实施，这将是第一个禁止某类中国学生进入美国的计划。目前美国已经就贸易、技术、人权和媒体访问等政策，与中共进行了几轮交锋。</p>
+<p>路透社也引用两名知情人士（其中一人是现任美国官员）的话表示，此举可能会影响3,000至5,000名中国学生，这一计划可能最早在本周就会宣布。</p>
+<p>知情人士说，在美国的相关中国学生将被取消签证并被驱逐出境，在美国境外的中国学生将不被允许返美。目前大约有36万中国学生在美国学习，所以被取消签证的比例很小，但其中一些人可能正在从事重要的研究项目。</p>
+<p>消息人士称，美国政府关于限制中国学生签证的审议工作已经进行了几个月。</p>
+<h2>中共军校学生涉嫌在美进行间谍活动</h2>
 <p>联邦调查局（F.B.I.）以及美国司法部多次告诉美国大学，中国学生尤其是从事科学研究工作的中国学生可能构成对美国的安全威胁。</p>
-<p>据美国官方估计，取消签证的措施可能会影响至少三千名中国学生。目前大约有36万中国学生在美国学习，所以被取消签证的比例很小，但其中一些人可能正在从事重要的研究项目。</p>
-<p>支持取消签证的美国官员说，中共军方学校与军方之间联系密切，远不是单纯的校园招募关系。在许多情况下，中共军方在学校中选拔可以出国的学生，给他们出学费，而被选中的学生则必须在海外替中共收集信息。</p>
-<p>美国官员们没有提供受影响的中方学校名单，但中共军队、军事机构和国防研究学校等大学应该在被制裁范围之内，其中许多是在中国名气很大的大学，拥有雄厚的资金和先进的科技设备。</p>
-<p>美国联邦调查局和司法部长期以来一直注重中共军校的学生，认为他们中的一些人受到基本的间谍培训，他们会收集美国信息并将其传递给中共军官，而一些学生毕业后进入了美国著名的科技公司，这让美国官员更加警惕。</p>
+<p>《纽约时报》报导，支持取消签证的美国官员说，中共军方学校与中共军方之间联系密切，远不是单纯的校园招募关系。在许多情况下，中共军方在学校中选拔可以出国的学生，给他们出学费，而被选中的学生则必须在海外替中共收集信息。</p>
+<p>报导说，美国官员们没有提供受影响的中方学校名单，但中共军队、军事机构和国防研究学校等大学应该在被制裁范围之内，其中许多是在中国名气很大的大学，拥有雄厚的资金和先进的科技设备。</p>
+<p>美国联邦调查局和司法部长期以来一直关注中共军校的学生，认为他们中的一些人受到基本的间谍培训，他们会收集美国信息并将其传递给中共军官，而一些学生毕业后进入了美国著名的科技公司，这让美国官员更加警惕。</p>
+<h2>美国政府曾多次讨论限制中方学生签证</h2>
 <p>川普政府官员表示，过去三年来，美国官员都曾讨论过限制中国学生签证的问题。今年4月底，美国共和党籍联邦参议员汤姆·科顿（Tom Cotton）再发出禁止中国学生赴美国大学进修科技专业的提议。</p>
 <p>科顿在推特上发文说：“中国共产党正在用从我们的实验室和研究型大学获得的技术武装自己。我们需要重新考虑发放给中国公民学习（军民）两用（dual-use）科技（知识）的签证，特别是研究生级别的STEM（理工科）学生。”</p>
 <p>智库澳大利亚战略政策研究所（Australian Strategic Policy Institute）2018年发布的一份名为《摘花酿蜜》的报告称，披露中共过去10年，派出数千名研究人员前往西方国家攫取军事技术。</p>
 <p>这种作法被中共军方称为“全球采花，中国（中共）酿蜜”的做法，这强化了中共的军事科技，但进一步掠夺和危害西方的战略优势。</p>
-<p>研究指出，这些毕业生的目标是针对“五眼联盟”共享情报的国家：美国、加拿大、英国、新西兰和澳大利亚。在许多情况下，学生们在寻求国防应用领域的工作，如高超音速技术等领域的工作时，隐藏了自己的军方背景。#</p>
+<p>研究指出，这些毕业生的目标是针对“五眼联盟”共享情报的国家：美国、加拿大、英国、新西兰和澳大利亚。在许多情况下，学生们在寻求国防应用领域的工作，如高超音速技术等领域的工作时，隐藏了自己的军方背景。</p>
+<h2>美国对中共进行“全面施压”</h2>
+<p>美国酝酿宣布签证限制之时，正值中共强行推动“港版国安法”之际，知情人士说，虽然限制签证的计划与香港的紧张局势没有直接关系，但宣布这一政策的时机，似乎是美国针对中共进行“全面施压”的一部分。</p>
+<p>中共当局目前罔顾香港民意，强行推动港版国安法，该法将削弱香港公民的权利和自由。国际社会对港版国安法均表示关注，人们普遍认为这是香港自治的可能转折点。</p>
+<p>美国国务卿迈克·蓬佩奥周三（5月27日）宣布香港不再具有自治权，因此不再获保证享有主权回归前美国所赋予的特殊待遇。川普总统正在决定下一步采取何种行动。</p>
+<p>川普总统周二被问及白宫实施制裁的可能性时说，他将在本周晚些时候宣布这一消息。“我认为是非常有力的（对中共的回应）。”川普说。</p>
 <p>责任编辑：林妍</p>
 	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/20/4/19/n12044225.md#1">【一线采访】俄罗斯如何借疫情驱赶华人</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/20/4/21/n12050455.md#1">封锁期间移民局放宽工作签证规定</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/20/5/26/n12139052.md#1">【最新疫情5?27】美逾10万死于中共病毒</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/20/5/28/n12143249.md#1">中共通过港版国安法 美商会会长：摊牌时刻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/19/n12044225.md#1">【一线采访】俄罗斯如何借疫情驱赶华人</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/21/n12050455.md#1">封锁期间移民局放宽工作签证规定</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/26/n12139052.md#1">【最新疫情5?27】美逾10万死于中共病毒</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690617.md#1">【十字路口】为俄助攻 中共网军提前进攻乌国？</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/6/n11704921.md#1" target="_blank">启明：共产党注定灭亡</a></li><li><a href="https://github.com/roz252/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/5/5/n9109957.md#1" target="_blank">永远的传奇—从长春到世界（下）</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/13/n10214588.md#1" target="_blank">刘晓：斯大林“文学总管”的自我毁灭</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/11/27/n8533466.md#1" target="_blank">一位医生太太见证医学无法达到的奇迹</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/20/5/27/n12141250.md#1">蓬佩奥：香港无自治 不再保证获美特殊待遇</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/20/5/26/n12138645.md#1">【内幕】病毒攻陷舒兰市公安局的过程</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/20/5/26/n12138369.md#1">股王大立光撤出苏州 汇回台湾3亿多美金</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/20/5/26/n12138581.md#1">中共外交公文曝光 “台湾万岁”成推特热词</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/20/5/26/n12138527.md#1">崔永元晒视频杠上胡锡进：千颗核弹头放你家</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/20/5/25/n12135738.md#1">唐绮阳预测下半年运势：选边站不容模糊以对</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/20/5/27/n12139391.md#1">黄秋生居家检疫出关 夸台湾防疫、想吃卤肉饭</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/20/5/26/n12137500.md#1">影帝吴朋奉骤逝 法医鉴定死因为脑中风</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/20/5/26/n12136657.md#1">影帝吴朋奉在家倒地猝逝 享年55岁</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/20/5/26/n12139000.md#1">欧阳娜娜演技遭负评 何炅打抱不平后又道歉</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/20/4/18/n12042366.md#1">灾难前神明托梦示警 信者免遭劫难</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/20/5/20/n12122612.md#1">【传奇时代】芬兰“天籁之声” 唱出中国人权希望</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/12/4/7/n3559927.md#1">围棋别称中的故事</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/20/5/25/n12134403.md#1">“一鼓作气” 一场战争醒悟一生</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/20/5/24/n12133296.md#1">浮生行吟：读书笔记——莎士比亚《人生的七个阶段》</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689405.md#1">【财商天下】水泥地种粮食 中国复耕“大跃进”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689428.md#1">【军事热点】美国新国防战略 中共位居威胁之首</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688842.md#1">【十字路口】曹兴诚重炮轰 中共是“人类公敌”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686756.md#1">巨星布鲁斯威利患失语症 医：警惕2大原因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/roz252/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/roz252/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/5/28/n12143427.htm">美计划取消中共军方背景人员签证 涉数千人</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/5/28/n12143427.htm">美拟制裁数千中共军校人员 取消签证并驱逐</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/roz252/djy/blob/master/gb/20/5/28/n12143427.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/roz252/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/roz252/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/roz252/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/20/5/28/n12143427.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
